
syntax = "proto3";


package pydantic_example;
enum ExampleType {
    UNKNOWN = 0;
    TYPE1 = 1;
    TYPE2 = 2;
    TYPE3 = 3;
  }