# !/usr/bin/env python
# -*- encoding: utf-8 -*-
"""
@File    :   constant_model.py
@Time    :   2025-06-29 08:39:04
@Desc    :   Generated Pydantic models from protobuf definitions
"""

from enum import Enum as _Enum


class ExampleType(_Enum):
    UNKNOWN = 0
    TYPE1 = 1
    TYPE2 = 2
    TYPE3 = 3
